--- a/package.json
+++ b/package.json
@@ -3,29 +3,29 @@
   "version": "0.0.1",
   "description": "Online platform to facilitate communication between instructors and students during lecture",
   "repository": "https://github.com/TsaiAnson/eLecture.git",
-  "main": "src/server/index.js",
+  "main": "server/index.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=production node src/server/index.js",
-    "build": "cross-env NODE_ENV=production node_modules/.bin/webpack -p",
-    "dev": "cross-env NODE_ENV=development node_modules/.bin/babel-node --presets react,es2015 src/server/index.js"
+    "build": "webpack --config ./webpack/webpack.config.js",
+    "dev": "npm run build & node server/index.js",
+    "start": "node server/index.js"
   },
   "author": "Anson, Titan",
   "license": "MIT",
   "dependencies": {
-    "babel-cli": "^6.24.1",
-    "babel-core": "^6.24.1",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "cross-env": "^5.0.0",
-    "ejs": "^2.5.6",
+    "babel-core": "^6.25.0",
+    "bootstrap": "^4.0.0-alpha.6",
     "express": "^4.15.3",
-    "mongoose": "^4.10.4",
+    "mongoose": "^4.10.6",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-router": "^4.1.1"
   },
   "devDependencies": {
     "babel-loader": "^7.0.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "css-loader": "^0.28.4",
+    "style-loader": "^0.18.2",
     "webpack": "^2.6.1"
   }
 }
