--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
   "license": "MIT",
   "dependencies": {
     "babel-core": "^6.25.0",
-    "bootstrap": "^4.0.0-alpha.6",
     "express": "^4.15.3",
     "mongoose": "^4.10.6",
     "react": "^15.5.4",
+    "react-bootstrap": "^0.31.0",
     "react-dom": "^15.5.4",
     "react-router": "^4.1.1"
   },
