--- a/package.json
+++ b/package.json
@@ -5,14 +5,17 @@
   "repository": "https://github.com/TsaiAnson/eLecture.git",
   "main": "server/index.js",
   "scripts": {
-    "build": "webpack --config ./webpack/webpack.config.js",
-    "dev": "npm run build & node server/index.js",
-    "start": "node server/index.js"
+    "build": "cross-env NODE_ENV=production webpack -p --config ./webpack/webpack.config.js",
+    "build:dev": "cross-env NODE_ENV=development webpack -d --config ./webpack/webpack.config.js",
+    "dev": "npm run build:dev & npm start",
+    "prod": "npm run build & npm start",
+    "start": "cross-env NODE_ENV=production node server/index.js"
   },
   "author": "Anson, Titan",
   "license": "MIT",
   "dependencies": {
     "babel-core": "^6.25.0",
+    "cross-env": "^5.0.1",
     "express": "^4.15.3",
     "mongoose": "^4.10.6",
     "react": "^15.5.4",
