--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "repository": "https://github.com/TsaiAnson/eLecture.git",
   "main": "server/index.js",
   "scripts": {
-    "build": "cross-env NODE_ENV=production webpack -p --config ./webpack/webpack.config.js",
-    "build:dev": "cross-env NODE_ENV=development webpack -d --config ./webpack/webpack.config.js",
+    "build": "cross-env NODE_ENV=production webpack -p --config ./build/webpack.config.js",
+    "build:dev": "cross-env NODE_ENV=development webpack -d --config ./build/webpack.config.js",
     "dev": "npm run build:dev & npm start",
     "prod": "npm run build & npm start",
     "start": "cross-env NODE_ENV=production node server/index.js"
@@ -15,18 +15,18 @@
   "license": "MIT",
   "dependencies": {
     "babel-core": "^6.25.0",
-    "cross-env": "^5.0.1",
     "express": "^4.15.3",
     "mongoose": "^4.10.6",
-    "react": "^15.5.4",
+    "react": "^15.6.0",
     "react-bootstrap": "^0.31.0",
-    "react-dom": "^15.5.4",
+    "react-dom": "^15.6.0",
     "react-router": "^4.1.1"
   },
   "devDependencies": {
     "babel-loader": "^7.0.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "cross-env": "^5.0.1",
     "css-loader": "^0.28.4",
     "style-loader": "^0.18.2",
     "webpack": "^2.6.1"
