--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build:dev": "cross-env NODE_ENV=development webpack -d --config ./build/webpack.config.js",
     "dev": "npm run build:dev & npm start",
     "prod": "npm run build & npm start",
-    "start": "cross-env NODE_ENV=production node server/index.js"
+    "start": "cross-env NODE_ENV=production node server/index.js",
+    "test": "cross-env NODE_ENV=test mocha"
   },
   "author": "Anson, Titan",
   "license": "MIT",
@@ -26,8 +27,11 @@
     "babel-loader": "^7.0.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "chai": "^4.0.2",
+    "chai-http": "^3.0.0",
     "cross-env": "^5.0.1",
     "css-loader": "^0.28.4",
+    "mocha": "^3.4.2",
     "style-loader": "^0.18.2",
     "webpack": "^2.6.1"
   }
