--- a/package.json
+++ b/package.json
@@ -10,23 +10,28 @@
     "dev": "npm run build:dev & npm start",
     "prod": "npm run build & npm start",
     "start": "cross-env NODE_ENV=production node server/index.js",
-    "test": "cross-env NODE_ENV=test mocha"
+    "test": "cross-env NODE_ENV=test mocha --recursive"
   },
   "author": "Anson, Titan",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.16.2",
     "babel-core": "^6.25.0",
+    "body-parser": "^1.17.2",
     "express": "^4.15.3",
-    "mongoose": "^4.10.8",
+    "mongoose": "^4.11.0",
     "react": "^15.6.1",
     "react-bootstrap": "^0.31.0",
     "react-dom": "^15.6.1",
-    "react-router": "^4.1.1"
+    "react-redux": "^5.0.5",
+    "react-router": "^4.1.1",
+    "redux": "^3.7.1"
   },
   "devDependencies": {
-    "babel-loader": "^7.1.0",
+    "babel-loader": "^7.1.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
     "chai": "^4.0.2",
     "chai-http": "^3.0.0",
     "cross-env": "^5.0.1",
