--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
   "dependencies": {
     "axios": "^0.16.2",
     "babel-core": "^6.25.0",
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
     "mongoose": "^4.11.0",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0",
     "react": "^15.6.1",
     "react-bootstrap": "^0.31.0",
     "react-dom": "^15.6.1",
