--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "babel-core": "^6.25.0",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.17.2",
+    "connect-mongo": "^1.3.2",
     "express": "^4.15.3",
+    "express-session": "^1.15.3",
     "mongoose": "^4.11.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
