--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "connect-mongo": "^1.3.2",
     "express": "^4.15.3",
     "express-session": "^1.15.3",
-    "mongoose": "^4.11.0",
+    "mongoose": "^4.11.1",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "react": "^15.6.1",
@@ -30,8 +30,8 @@
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
     "react-router": "^4.1.1",
-    "react-router-redux": "^4.0.8",
-    "redux": "^3.7.1"
+    "redux": "^3.7.1",
+    "webpack": "^3.1.0"
   },
   "devDependencies": {
     "babel-loader": "^7.1.1",
@@ -43,7 +43,6 @@
     "cross-env": "^5.0.1",
     "css-loader": "^0.28.4",
     "mocha": "^3.4.2",
-    "style-loader": "^0.18.2",
-    "webpack": "^3.0.0"
+    "style-loader": "^0.18.2"
   }
 }
