--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
   "scripts": {
     "build": "cross-env NODE_ENV=production webpack -p --config ./build/webpack.config.js",
     "build:dev": "cross-env NODE_ENV=development webpack -d --config ./build/webpack.config.js",
-    "dev": "npm run build:dev & npm start",
+    "dev": "npm run build:dev & npm run start:dev",
     "prod": "npm run build & npm start",
     "start": "cross-env NODE_ENV=production node server/index.js",
+    "start:dev": "cross-env NODE_ENV=development node server/index.js",
     "test": "cross-env NODE_ENV=test mocha --recursive"
   },
   "author": "Anson, Titan",
@@ -30,8 +31,7 @@
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
     "react-router": "^4.1.1",
-    "redux": "^3.7.1",
-    "webpack": "^3.1.0"
+    "redux": "^3.7.1"
   },
   "devDependencies": {
     "babel-loader": "^7.1.1",
@@ -43,6 +43,7 @@
     "cross-env": "^5.0.1",
     "css-loader": "^0.28.4",
     "mocha": "^3.4.2",
-    "style-loader": "^0.18.2"
+    "style-loader": "^0.18.2",
+    "webpack": "^3.1.0"
   }
 }
