Courses routes and logout

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "start:dev": "cross-env NODE_ENV=development node server/index.js",
     "test": "cross-env NODE_ENV=test mocha --recursive"
   },
-  "author": "Anson, Titan",
+  "author": "Anson, Jove, Titan",
   "license": "MIT",
   "dependencies": {
     "axios": "^0.16.2",
