--- a/package.json
+++ b/package.json
@@ -27,11 +27,12 @@
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "react": "^15.6.1",
-    "react-bootstrap": "^0.31.0",
+    "react-bootstrap": "^0.31.1",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
     "react-router": "^4.1.1",
-    "redux": "^3.7.1",
+    "react-router-redux": "^4.0.8",
+    "redux": "^3.7.2",
     "socket.io": "^2.0.3"
   },
   "devDependencies": {
@@ -39,12 +40,12 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
-    "chai": "^4.0.2",
+    "chai": "^4.1.0",
     "chai-http": "^3.0.0",
     "cross-env": "^5.0.1",
     "css-loader": "^0.28.4",
     "mocha": "^3.4.2",
     "style-loader": "^0.18.2",
-    "webpack": "^3.1.0"
+    "webpack": "^3.2.0"
   }
 }
