--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "connect-mongo": "^1.3.2",
     "express": "^4.15.3",
     "express-session": "^1.15.3",
-    "mongoose": "^4.11.1",
+    "mongoose": "^4.11.3",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "react": "^15.6.1",
@@ -31,8 +31,8 @@
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
     "react-router": "^4.1.1",
-    "react-router-redux": "^4.0.8",
     "redux": "^3.7.2",
+    "redux-persist": "^4.8.2",
     "socket.io": "^2.0.3"
   },
   "devDependencies": {
@@ -46,6 +46,6 @@
     "css-loader": "^0.28.4",
     "mocha": "^3.4.2",
     "style-loader": "^0.18.2",
-    "webpack": "^3.2.0"
+    "webpack": "^3.3.0"
   }
 }
