--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "cross-env": "^5.0.1",
     "css-loader": "^0.28.4",
     "mocha": "^3.4.2",
+    "redux-logger": "^3.0.6",
     "style-loader": "^0.18.2",
     "webpack": "^3.3.0"
   }
