--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "mongoose": "^5.1.3",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
+    "prop-types": "^15.6.1",
     "react": "^16.4.0",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.4.0",
@@ -39,16 +40,16 @@
     "react-router": "^4.2.0",
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
-    "redux-persist": "^5.9.1",
+    "redux-persist": "^4.10.2",
     "socket.io": "^2.1.1",
     "style-loader": "^0.21.0",
-    "webpack": "^4.10.2"
+    "webpack": "^4.10.2",
+    "webpack-cli": "^3.0.1"
   },
   "devDependencies": {
     "chai": "^4.1.2",
     "chai-http": "^4.0.0",
     "mocha": "^5.2.0",
-    "nyc": "^12.0.1",
-    "webpack-cli": "^3.0.0"
+    "nyc": "^12.0.1"
   }
 }
